# atsamg5-hal

./: .gitignore  README.md
examples/gpio/: Cargo.toml  a
examples/gpio/src/: main.rs
hal/: Cargo.toml
hal/src/: clocks.rs  gpio.rs  lib.rs  prelude.rs
hal/src/gpio/: convert.rs
pac/atsamg55j/: Cargo.toml  device.x
pac/atsamg55j/src/: adc.rs  cmcc.rs  efc.rs  flexcom6.rs  i2sc1.rs  lib.rs  matrix.rs  mem2mem.rs  pdmic0.rs  piob.rs  pmc.rs  rtc.rs  rtt.rs  spi7.rs  supc.rs  tc0.rs  tc1.rs  twi1.rs  udp.rs  uhp.rs  usart6.rs
pac/atsamg55j/src/adc/: acr.rs  cdr.rs  chsr.rs  cor.rs  cr.rs  cwr.rs  emr.rs  idr.rs  ier.rs  imr.rs  isr.rs  lccwr.rs  lcdr.rs  lctmr.rs  mr.rs  over.rs  seqr1.rs
pac/atsamg55j/src/chipid/: cidr.rs
pac/atsamg55j/src/cmcc/: cfg.rs  ctrl.rs  maint0.rs  maint1.rs  mcfg.rs  mctrl.rs  men.rs  msr.rs  sr.rs  type_.rs
pac/atsamg55j/src/crccu/: cr.rs  dma_dis.rs  dma_en.rs  dma_idr.rs  dma_ier.rs  dma_imr.rs  dma_isr.rs  dma_sr.rs  idr.rs  ier.rs  mr.rs
pac/atsamg55j/src/efc/: fmr.rs  fsr.rs  wpmr.rs
pac/atsamg55j/src/flexcom2/: mr.rs
pac/atsamg55j/src/flexcom3/: rhr.rs
pac/atsamg55j/src/flexcom5/: thr.rs
pac/atsamg55j/src/i2sc0/: cr.rs  ier.rs  imr.rs  ssr.rs
pac/atsamg55j/src/i2sc1/: idr.rs  mr.rs  scr.rs  sr.rs  thr.rs
pac/atsamg55j/src/matrix/: ccfg_dynckg.rs  ccfg_i2sclksel.rs  ccfg_sysio.rs  ccfg_usbmr.rs  matrix_mcfg.rs  matrix_scfg.rs  matrix_wpmr.rs
pac/atsamg55j/src/mem2mem/: idr.rs  ier.rs  imr.rs  isr.rs  mr.rs  thr.rs
pac/atsamg55j/src/pdmic0/: cr.rs  dspr0.rs  dspr1.rs  imr.rs  mr.rs
pac/atsamg55j/src/pdmic1/: cdr.rs  idr.rs  ier.rs  isr.rs  wpmr.rs
pac/atsamg55j/src/pmc/: ckgr_mcfr.rs  ckgr_mor.rs  ckgr_pllar.rs  ckgr_pllbr.rs  pmc_fsmr.rs  (+22 more)
(+112 files in other folders)
