[package]
name = "gpio"
version = "0.1.0"
authors = ["Jeff McBride <mcbridejc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atsamg-hal = {path = '../../hal', features = ["samg55j-rt"]}
panic-halt = "0.2"
cortex-m = "0.7.0"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.3"