[package]
name = "atsamg55j"
description = "Peripheral access API for ATSAMG55J19 microcontrollers (generated using svd2rust)"
version = "0.1.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
keywords = ["no-std", "arm", "cortex-m"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies]
cortex-m = "0.7"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[features]
rt = ["cortex-m-rt/device"]


